--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>天気予報</h1>                                                   
   </header>                                                            
   <main>                                                               
-    <h2>今日の天気</h2>                                                 
+    <h2>今日の天気をお伝えします</h2>                                                 
     <p>よく晴れるでしょう</p>                                           
   </main>                                                              
     <footer>                                                             
