--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>                                                            
   <main>                                                               
     <h2>今日の天気をお伝えします</h2>                                                 
-    <p>よく晴れるでしょう</p>                                           
+    <p>雪が降るでしょう</p>                                           
   </main>                                                              
     <footer>                                                             
       Copyright IITENKI inc. All rights reserved.                           
